FE-RESETHESLA(Bez_Fetchu :/)

--- a/BE/html/email-change_password.html
+++ b/BE/html/email-change_password.html
@@ -33,7 +33,7 @@
                         <tr>
                           <td style="padding:0 0 36px 0;color:#153643;">
                             <h1 style="font-size:24px;margin:0 0 20px 0;font-family:Arial,sans-serif;">Reset your password</h1>
-                            <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">Change password to Classroom Interact!<br> To change your password, please click on the following link: <br><a style="color: #7825c6; text-decoration: none; border-bottom: 1px solid #7825c6" href="http://localhost:5173/change_password/{{token}}">Change password</a><br>Link is valid for 10 minutes.</p>
+                            <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">Change password to Classroom Interact!<br> To change your password, please click on the following link: <br><a style="color: #7825c6; text-decoration: none; border-bottom: 1px solid #7825c6" href="http://localhost:5173/reset/{{token}}">Change password</a><br>Link is valid for 10 minutes.</p>
                             <p style="margin:0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">Best regards,<br>Classroom Interact Team</p>
                           </td>
                         </tr>
