--- a/BE/html/email.html
+++ b/BE/html/email.html
@@ -50,7 +50,7 @@
                         <tr>
                           <td style="padding:0;width:50%;" align="left">
                             <p style="margin:0;font-size:14px;line-height:16px;font-family:Arial,sans-serif;color:#ffffff;">
-                              &reg; Classroom Interact {{year}}<br/>
+                              &reg; Classroom Interact 20{{year}}<br/>
                             </p>
                           </td>
                           <td style="padding:0;width:50%;" align="right">
